# kyra

./: .env.example  .env.local.dev  .env.local.example  .env.local.ghl  .env.production  .env.vercel  .env.vercel-check  .eslintignore  .eslintrc.json  .gitignore  .vercelignore  ARCHITECTURE-ANALYSIS.md  AUDIT-RESULTS.md  BRANDING.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE-MIGRATION.md  CONTAINER-ARCHITECTURE.md  E2E-TEST-RESULTS.md  E2E-VERIFICATION.md  HEARTBEAT.md  KYRA-AGENCY-PLATFORM-PLAN.md  KYRA-ROADMAP-2026-02-12.md  KYRA-STRATEGIC-ROADMAP.md  NEWCO-LAUNCH-PLAYBOOK.md  OVH-ARCHITECTURE-SPEC.md  PIPELINE-REDESIGN-SPEC.md  PRODUCT.md  README.md  REGULATED-VERTICALS-ROADMAP.md  SECURITY-ARCHITECTURE-ANALYSIS.md  SECURITY-AUDIT-2026-03-06.md  SECURITY-PHASE-0.md  SEO-COMMAND-CENTER-SPEC.md  SUMMARY.md  TECH-STACK.md  TECHNICAL-SPEC.md  TODOS.md  WORKER-DEPLOY-GUIDE.md  audit-prompt.txt  (+37 more)
.claude/: launch.json
KYRA/: Kyra_Bugs_Defects_Analysis.docx  Kyra_Claude_Integration_Analysis.docx
__tests__/: admin-auth.test.ts  agency-constants.test.ts  agency-settings-validator.test.ts  agent-runner.test.ts  ai-setup-apply-gate.test.ts  billing.test.ts  byok-priority.test.ts  compliance-guard.test.ts  credit-engine-addcredits.test.ts  credit-engine-dispatch.test.ts  cron-auth.test.ts  ghl-id-validate.test.ts  html-escape.test.ts  jane-api-credentials.test.ts  jane-api-token-and-stock.test.ts  jane-retry-cascade.test.ts  llm-failover.test.ts  (+8 more)
kyra-router/: Dockerfile  INTEGRATION.md  README.md  pyproject.toml
kyra-router/src/klaw/: api.py  kyra_templates.py  router.py
(+1404 files in other folders)
